# maksbotan.github.io

./: LICENSE  README.md  about.html  about.md  archive.html  contact.html  contact.md  index.html  maksbotan-blog.cabal  site.hs  stack.yaml
css/: default.css
posts/: 2019-09-04-abstract-definitional-interpreters.html  2019-09-04-abstract-definitional-interpreters.md  2020-02-18-generic-validation.html  2020-02-18-generic-validation.lhs  2020-02-18-generic-validation.md  2021-01-20-callstacks.html  2021-01-20-callstacks.md
templates/: default.html  post.html
