name:                maksbotan-blog
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/maksbotan/maksbotan-blog#readme
license:             BSD3
license-file:        LICENSE
author:              Maxim Koltsov
maintainer:          koltsov@biocad.ru
copyright:           (c) 2018, BIOCAD CBD
category:            Bio
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable maksbotan-blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       pandoc
